# Laplace-attention

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  NOTICE  README (1).md  README.md  SUPPORT.md  final.patch  final_hardening_v2.patch  final_polish.patch  fixes.patch  flatten_repo.patch  make_init.py  modal_app.py  paper_probes.patch  pyproject.toml  readme_rewrite.patch  requirements.txt  round10_litm.patch  round11_gigatoken.patch  round12_literal_policy.patch  round6_science.patch  round9_tpu_month.patch  train1.py
HLA-v5/: pyproject.toml  requirements.txt  requirements_tpu.txt
HLA-v5/configs/: 200m_base_s42.json  200m_hla_s42.json  300m_base_s42.json  300m_hla_s42.json  600m_base_15b_s42.json  600m_hla_15b_s42.json  700m_base_14b_b2g16_s42.json  700m_base_14b_b4g8_s42.json  700m_base_14b_b8g4_s42.json  700m_base_14b_s42.json  700m_hla_14b_b2g16_s42.json  700m_hla_14b_b4g8_s42.json  700m_hla_14b_b8g4_s42.json  700m_hla_14b_s42.json  800m_base_s42.json  800m_hla_s42.json  README.md  configs200m_base_s42.json  pilot_hla_s42.json  smoke_hla_s42.json
HLA-v5/docs/: DATA_CARD.md  EXPERIMENT_CARD.md  METRICS.md  THEORY.md
HLA-v5/scr/: eval.py  train_xla.py  utils.py
HLA-v5/scripts/: analyze_checkpoint.py  audit_config_values.py  audit_sterility.py  check_dataloader.py  check_environment.py  compare_attention_kl.py  count_params.py  estimate_budget.py  inspect_checkpoint.py  make_ablation_configs.py  make_dummy_data.py  preflight.sh  profile_flops.py  validate_configs.py
HLA-v5/src/: __init__.py  data.py  eval.py  make_init.py  manifest.py  model.py  train_xla.py
HLA-v5/tests/: test_ablation_configs.py  test_data.py  test_eval.py  (+4 more)
(+79 files in other folders)
